<?xml version="1.0" encoding="utf-8"?>
<com.simplemobiletools.filemanager.pro.fragments.StorageFragment xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/storage_fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:id="@+id/storage_scrollview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/storage_holder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            tools:ignore="HardcodedText,RelativeOverlap">

            <RelativeLayout
                android:id="@+id/free_space_holder"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackground"
                android:paddingStart="@dimen/activity_margin"
                android:paddingTop="@dimen/activity_margin"
                android:paddingEnd="@dimen/activity_margin">

                <com.simplemobiletools.commons.views.MyTextView
                    android:id="@+id/free_space_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="…"
                    android:textSize="@dimen/extra_big_text_size"
                    android:textStyle="bold"
                    tools:text="32 GB" />

                <com.simplemobiletools.commons.views.MyTextView
                    android:id="@+id/free_space_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_above="@+id/total_space"
                    android:layout_alignBaseline="@+id/free_space_value"
                    android:layout_alignBottom="@+id/free_space_value"
                    android:layout_marginStart="@dimen/medium_margin"
                    android:layout_toEndOf="@+id/free_space_value"
                    android:text="@string/storage_free"
                    android:textSize="@dimen/big_text_size"
                    android:visibility="invisible"
                    tools:visibility="visible" />

                <com.google.android.material.progressindicator.LinearProgressIndicator
                    android:id="@+id/main_storage_usage_progressbar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/free_space_value"
                    android:layout_marginTop="@dimen/medium_margin"
                    android:layout_marginBottom="@dimen/medium_margin"
                    android:max="100"
                    app:trackThickness="4dp"
                    tools:progress="50" />

                <com.simplemobiletools.commons.views.MyTextView
                    android:id="@+id/total_space"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/main_storage_usage_progressbar"
                    android:layout_marginBottom="@dimen/big_margin"
                    android:textSize="@dimen/normal_text_size"
                    tools:text="Total storage: 64 GB" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/images_holder"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackground"
                android:padding="@dimen/activity_margin">

                <com.simplemobiletools.commons.views.MyTextView
                    android:id="@+id/images_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/images"
                    android:textSize="@dimen/normal_text_size" />

                <com.simplemobiletools.commons.views.MyTextView
                    android:id="@+id/images_size"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:alpha="0.7"
                    android:text="…"
                    android:textSize="@dimen/small_text_size"
                    tools:text="20 GB" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/videos_holder"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackground"
                android:padding="@dimen/activity_margin">

                <com.simplemobiletools.commons.views.MyTextView
                    android:id="@+id/videos_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/videos"
                    android:textSize="@dimen/normal_text_size" />

                <com.simplemobiletools.commons.views.MyTextView
                    android:id="@+id/videos_size"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:alpha="0.7"
                    android:text="…"
                    android:textSize="@dimen/small_text_size"
                    tools:text="20 GB" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/audio_holder"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackground"
                android:padding="@dimen/activity_margin">

                <com.simplemobiletools.commons.views.MyTextView
                    android:id="@+id/audio_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/audio"
                    android:textSize="@dimen/normal_text_size" />

                <com.simplemobiletools.commons.views.MyTextView
                    android:id="@+id/audio_size"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:alpha="0.7"
                    android:text="…"
                    android:textSize="@dimen/small_text_size"
                    tools:text="20 GB" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/documents_holder"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackground"
                android:padding="@dimen/activity_margin">

                <com.simplemobiletools.commons.views.MyTextView
                    android:id="@+id/documents_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/documents"
                    android:textSize="@dimen/normal_text_size" />

                <com.simplemobiletools.commons.views.MyTextView
                    android:id="@+id/documents_size"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:alpha="0.7"
                    android:text="…"
                    android:textSize="@dimen/small_text_size"
                    tools:text="20 GB" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/archives_holder"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackground"
                android:padding="@dimen/activity_margin">

                <com.simplemobiletools.commons.views.MyTextView
                    android:id="@+id/archives_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/archives"
                    android:textSize="@dimen/normal_text_size" />

                <com.simplemobiletools.commons.views.MyTextView
                    android:id="@+id/archives_size"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:alpha="0.7"
                    android:text="…"
                    android:textSize="@dimen/small_text_size"
                    tools:text="20 GB" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/others_holder"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackground"
                android:padding="@dimen/activity_margin">

                <com.simplemobiletools.commons.views.MyTextView
                    android:id="@+id/others_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/others"
                    android:textSize="@dimen/normal_text_size" />

                <com.simplemobiletools.commons.views.MyTextView
                    android:id="@+id/others_size"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:alpha="0.7"
                    android:text="…"
                    android:textSize="@dimen/small_text_size"
                    tools:text="20 GB" />

            </RelativeLayout>

        </LinearLayout>

    </ScrollView>

</com.simplemobiletools.filemanager.pro.fragments.StorageFragment>
